windows-security/require-run-as-containeruser/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-windows-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windows-app
  template:
    metadata:
      labels:
        app: windows-app
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: windows 
      securityContext:
        runAsNonRoot: true
        windowsOptions:
          hostProcess: false
          runAsUserName: "ContainerUser"
      hostNetwork: false
      containers:
      - name: windows-container
        image: mcr.microsoft.com/windows/servercore:ltsc2019
        command: ["cmd", "/c", "echo", "Hello from Windows Container && timeout", "/t", "300"]
